// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsCard renders correctly in smaller variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": 341.5,
    }
  }
  testID="items-card-pressable"
>
  <View
    style={
      {
        "borderRadius": 15,
        "elevation": 3,
        "height": 250,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 2.84,
        "width": 330,
      }
    }
    testID="items-card-container"
  >
    <View
      testID="items-card-image"
    >
      <Text>
        MockImage
      </Text>
    </View>
    <View
      testID="mock-info"
    >
      <Text>
        Test Item
      </Text>
      <Text>
        Test Location
      </Text>
    </View>
  </View>
</View>
`;

exports[`ItemsCard renders correctly with default props 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "width": 341.5,
    }
  }
  testID="items-card-pressable"
>
  <View
    style={
      {
        "borderRadius": 15,
        "elevation": 3,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 2.84,
        "width": 341.5,
      }
    }
    testID="items-card-container"
  >
    <View
      testID="items-card-image"
    >
      <Text>
        MockImage
      </Text>
    </View>
    <View
      testID="mock-info"
    >
      <Text>
        Test Item
      </Text>
      <Text>
        Test Location
      </Text>
    </View>
  </View>
</View>
`;
